# yew-wasm-pack-template

./: Cargo.toml  README.md
static/: index.html
